# wasmcov

./: Cargo.toml  LICENSE-MIT  Makefile  README.md  _config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-test.yml
docs/: General.md  NEAR.md  README.md  _config.yml
docs/blockchains/: NEAR.md  Radix.md
src/: bin.rs  build.rs  cli.rs  common.rs  dir.rs  lib.rs  llvm.rs  main.rs  near.rs  near_sandbox.rs  report.rs  utils.rs
src/near/: init.rs  mod.rs
src/tools/: lib.rs
tests/: fibonacci-cov
tests/output/: fibonacci  fibonacci-cov-expected.ll  fibonacci-cov.ll  fibonacci.ll
tests/profraw/: 0.profraw  1.profraw  coverage-expected.profdata
