[package]
name = "wasmcov"
version = "0.0.4"
edition = "2021"
authors = ["Noah Jelich <n.jelich@hacken.io>", "Bartosz Barwikowski <b.barwikowski@hacken.io>"]
description = "A set of helpers for coverage of wasm modules"

license = "Apache-2.0"

readme ="README.md"
documentation = "https://hknio.github.io/wasmcov/"
repository = "https://github.com/hknio/wasmcov"

keywords = ["crypto", "wasm", "blockchain", "testing", "profiling"]
categories = ["development-tools", "embedded", "wasm", "command-line-utilities", "cryptography::cryptocurrencies"]

exclude = [
    "bin/*",
    "docs/*",
]

[lib]
name = "wasmcov"
path = "src/lib.rs"

[[bin]]
name = "cargo-wasmcov"
path = "src/bin.rs"

[dependencies]
uuid = { version = "1.5.0", features = ["v4"] }
regex = { version = "1.5.5" }
near-sdk = { version = "4.1.1", optional = true }
anyhow = { version = "1.0.75" }
clap = { version = "4.4.8", features = ["cargo"] }
glob = { version = "0.3.1" }

[dev-dependencies]
tempfile = "3.8.1"

[features]
near = ["dep:near-sdk"]

