[package]
name = "wasmcov"
version = "0.2.0"
edition = "2021"
authors = ["Bartosz Barwikowski <b.barwikowski@hacken.io>", "Noah Jelich <n.jelich@hacken.io>"]
description = "A set of helpers for coverage of wasm modules"

license = "Apache-2.0"

readme ="README.md"
documentation = "https://hknio.github.io/wasmcov/"
repository = "https://github.com/hknio/wasmcov"

keywords = ["crypto", "wasm", "blockchain", "testing", "profiling", "webassembly"]
categories = ["development-tools", "embedded", "wasm", "command-line-utilities", "cryptography::cryptocurrencies"]

exclude = [
    "docs/*",
]

[lib]
name = "wasmcov"
path = "src/lib.rs"

[[bin]]
name = "cargo-wasmcov"
path = "src/bin/wasmcov.rs"

[target.'cfg(target_family = "wasm")'.dependencies]
minicov = { git = "https://github.com/bbarwikowski-hacken/minicov" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
regex = { version = "1.7.1" }
anyhow = { version = "1.0.62" }
clap = { version = "4.2", features = ["cargo", "derive"] }
glob = { version = "0.3.1" }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tempfile = "3.8.1"

[features]
default = ["near_sandbox"]
near_sandbox = []

[dependencies]
serde_json = "1.0.117"
