[package]
name = "wasmcov"
version = "0.2.2"
edition = "2021"
authors = ["Bartosz Barwikowski <b.barwikowski@hacken.io>", "Noah Jelich <n.jelich@hacken.io>"]
description = "A set of helpers for coverage of wasm modules"

license = "Apache-2.0"

readme ="README.md"
documentation = "https://hknio.github.io/wasmcov/"
repository = "https://github.com/hknio/wasmcov"

keywords = ["crypto", "wasm", "blockchain", "testing", "profiling"]
categories = ["development-tools", "embedded", "wasm", "command-line-utilities", "cryptography::cryptocurrencies"]

exclude = [
    ".devcontainer",
    "docs/*",
]

[lib]
name = "wasmcov"
path = "src/lib.rs"

[[bin]]
name = "cargo-wasmcov"
path = "src/bin/wasmcov.rs"
required-features = ["near_sandbox"]

[target.'cfg(target_family = "wasm")'.dependencies]
minicov = "0.3.5"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
regex = "1.10.5"
anyhow = "1.0.86"
clap = { version = "4.2", features = ["cargo", "derive"] }
glob = "0.3.1"
serde_json = "1.0.118"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tempfile = "3.10.1"

[features]
default = ["near_sandbox"]
near_sandbox = []
